--- a/src/app.html
+++ b/src/app.html
@@ -1,8 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="hamlindigo">
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Jesper Johans</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
